--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bees Todo</title>
-    <script src='main.js' defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Todo List</title>
+  <script src='app.js' defer></script>
 </head>
+
 <body>
-    <section>
-        <ul id='todo-list'></ul>
-        <form>
-            <input type='text' id='todo-input' />
-            <button id='submit-btn'>Add</button>
-        </form>
-    </section>
+  <section>
+    <ul id='todo-list'>Todo List</ul>
+    <form>
+      <input type='text' id='todo-input' />
+      <button id='todo-button'>Add</button>
+    </form>
+  </section>
 </body>
+
 </html>
